--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -1,6 +1,7 @@
 doctype
 block vars
   - var bodyclass = null;
+  - var relativeTo = page != null ? page.url : '/'
 html(lang='en')
   head
     block head
@@ -11,14 +12,14 @@ html(lang='en')
         block title
           = locals.name
       link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300')
-      link(rel='stylesheet', href='/css/main.css')
+      link(rel='stylesheet', href=env.helpers.makeRelative(relativeTo, '/css/main.css'))
   body(class=bodyclass)
     header.header
       div.content-wrap
         ul.pages
           each article in env.helpers.getArticles(contents)
             li
-              a(href=article.url)= article.title
+              a(href=env.helpers.makeRelative(relativeTo, article.url))= article.title
               section.content
         block header
           div.logo
