--- a/contents/css/main.css
+++ b/contents/css/main.css
@@ -116,6 +116,10 @@ hr {
   margin-top: -0.3em;
 }
 
+.pages {
+  margin-left: 5px;
+}
+
 body.article-detail > header h1 {
   font-size: 2.5em;
   font-style: italic;
@@ -134,9 +138,28 @@ footer {
 }
 
 footer .nav {
+  margin: 0 auto;
   text-align: center;
   margin-top: 5em;
   margin-bottom: 3.5em;
+}
+
+footer .nav .index {
+  clear: both;
+  display: inline-block;
+  margin: 0 auto;
+}
+
+footer .nav .previous {
+  float: left;
+  width: 33%;
+  display: inline-block;
+}
+
+footer .nav .next {
+  float: right;
+  width: 33%;
+  display: inline-block;
 }
 
 footer .nav a {
